# expulsabotrs

./: .env.example  .justfile  .vampus.yml  Cargo.toml  Dockerfile  README.md  compose.yml
src/: bot.rs  challenge_tests.rs  commands.rs  main.rs  matrix.rs  openobserve.rs  telegram.rs
