[package]
name = "expulsabot"
version = "0.3.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
    "time",
] }
rand = "0.9.2"
time = { version = "0.3.47", features = [
    "formatting",
    "local-offset",
    "macros",
] }
pulldown-cmark = "0.13.0"
urlencoding = "2.1.3"
uuid = { version = "1.0", features = ["v4"] }
